feat: 추천 이유 태그 기반 생성 적용
Gemini/Perplexity 기반 추천 및 이유 생성 로직을 제거

최종 후보 태그로 description 해시태그와 reason 문장 생성 로직 추가